MdTextButton: get rid of distinct "default" styling and make all default dialog buttons blue.

BUG=644849

Review-Url: https://codereview.chromium.org/2361063002
Cr-Commit-Position: refs/heads/master@{#420488}

Former-commit-id: 1713992c55069cc914715dac18356a3eef774b8e